// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots organisms/KarutaPlayingCorrect all answered 1`] = `
<div
  className=""
>
  <div
    className="makeStyles-header-687"
  >
    <div
      className="makeStyles-headerLabel-688"
    >
      <span
        className="makeStyles-root-693 makeStyles-root-694 "
      >
        一番
      </span>
       / 
      <span
        className="makeStyles-root-693 makeStyles-root-695 "
      >
        一字決まり
      </span>
    </div>
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-materialButton-689"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        資
      </span>
    </button>
  </div>
  <div
    className="makeStyles-root-696 makeStyles-root-704 makeStyles-fuda-690"
  >
    <div
      className="makeStyles-inner-697"
    >
      <span
        className="makeStyles-root-693 makeStyles-root-712 makeStyles-root-710 makeStyles-root-711 makeStyles-firstPhrase-698"
      >
        秋の田の
      </span>
      <span
        className="makeStyles-root-693 makeStyles-root-714 makeStyles-root-710 makeStyles-root-713 makeStyles-secondPhrase-699 makeStyles-secondPhrase-705"
      >
        かりほの庵の
      </span>
      <span
        className="makeStyles-root-693 makeStyles-root-716 makeStyles-root-710 makeStyles-root-715 makeStyles-thirdPhrase-700 makeStyles-thirdPhrase-706"
      >
        苫をあらみ
      </span>
      <span
        className="makeStyles-root-693 makeStyles-root-718 makeStyles-root-710 makeStyles-root-717 makeStyles-fourthPhrase-701 makeStyles-fourthPhrase-707"
      >
        わが衣手は
      </span>
      <span
        className="makeStyles-root-693 makeStyles-root-720 makeStyles-root-710 makeStyles-root-719 makeStyles-fifthPhrase-702 makeStyles-fifthPhrase-708"
      >
        露にぬれつつ
      </span>
      <span
        className="makeStyles-root-693 makeStyles-root-722 makeStyles-root-710 makeStyles-root-721 makeStyles-creator-703 makeStyles-creator-709"
      >
        天智天皇
      </span>
    </div>
  </div>
  <button
    className="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-arrowButton-691"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root makeStyles-default-723 makeStyles-default-725"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M5.88 4.12L13.76 12l-7.88 7.88L8 22l10-10L8 2z"
        />
      </svg>
      結果を見る
    </span>
  </button>
</div>
`;

exports[`Storyshots organisms/KarutaPlayingCorrect in answer 1`] = `
<div
  className=""
>
  <div
    className="makeStyles-header-646"
  >
    <div
      className="makeStyles-headerLabel-647"
    >
      <span
        className="makeStyles-root-652 makeStyles-root-653 "
      >
        一番
      </span>
       / 
      <span
        className="makeStyles-root-652 makeStyles-root-654 "
      >
        一字決まり
      </span>
    </div>
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-materialButton-648"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        資
      </span>
    </button>
  </div>
  <div
    className="makeStyles-root-655 makeStyles-root-663 makeStyles-fuda-649"
  >
    <div
      className="makeStyles-inner-656"
    >
      <span
        className="makeStyles-root-652 makeStyles-root-671 makeStyles-root-669 makeStyles-root-670 makeStyles-firstPhrase-657"
      >
        秋の田の
      </span>
      <span
        className="makeStyles-root-652 makeStyles-root-673 makeStyles-root-669 makeStyles-root-672 makeStyles-secondPhrase-658 makeStyles-secondPhrase-664"
      >
        かりほの庵の
      </span>
      <span
        className="makeStyles-root-652 makeStyles-root-675 makeStyles-root-669 makeStyles-root-674 makeStyles-thirdPhrase-659 makeStyles-thirdPhrase-665"
      >
        苫をあらみ
      </span>
      <span
        className="makeStyles-root-652 makeStyles-root-677 makeStyles-root-669 makeStyles-root-676 makeStyles-fourthPhrase-660 makeStyles-fourthPhrase-666"
      >
        わが衣手は
      </span>
      <span
        className="makeStyles-root-652 makeStyles-root-679 makeStyles-root-669 makeStyles-root-678 makeStyles-fifthPhrase-661 makeStyles-fifthPhrase-667"
      >
        露にぬれつつ
      </span>
      <span
        className="makeStyles-root-652 makeStyles-root-681 makeStyles-root-669 makeStyles-root-680 makeStyles-creator-662 makeStyles-creator-668"
      >
        天智天皇
      </span>
    </div>
  </div>
  <button
    className="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-arrowButton-650"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <span
      className="MuiButton-label"
    >
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root makeStyles-default-682 makeStyles-default-684"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M5.88 4.12L13.76 12l-7.88 7.88L8 22l10-10L8 2z"
        />
      </svg>
      次へ進む
    </span>
  </button>
</div>
`;
